--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.x
-      - name: Setup Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: v3.12.3
+#      - name: Setup Helm
+#        uses: azure/setup-helm@v3
+#        with:
+#          version: v3.12.3
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -35,17 +35,17 @@ jobs:
       - name: Setup Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Login to GitHub Container Registry
+#        uses: docker/login-action@v3
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Prepare
         id: prep
         run: |
@@ -62,7 +62,7 @@ jobs:
         with:
           images: |
             docker.io/stefanprodan/podinfo
-            ghcr.io/stefanprodan/podinfo
+#            ghcr.io/stefanprodan/podinfo
           tags: |
             type=raw,value=${{ steps.prep.outputs.VERSION }}
             type=raw,value=latest
@@ -80,35 +80,35 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Publish Timoni module to GHCR
-        run: |
-          timoni mod push ./timoni/podinfo oci://ghcr.io/stefanprodan/modules/podinfo \
-          --sign cosign \
-          --version ${{ steps.prep.outputs.VERSION }} \
-          -a 'org.opencontainers.image.source=https://github.com/stefanprodan/podinfo' \
-          -a 'org.opencontainers.image.licenses=Apache-2.0' \
-          -a 'org.opencontainers.image.description=A timoni.sh module for deploying Podinfo.' \
-          -a 'org.opencontainers.image.documentation=https://github.com/stefanprodan/podinfo/blob/main/timoni/podinfo/README.md'
-      - name: Publish Helm chart to GHCR
-        run: |
-          helm package charts/podinfo
-          helm push podinfo-${{ steps.prep.outputs.VERSION }}.tgz oci://ghcr.io/stefanprodan/charts
-          rm podinfo-${{ steps.prep.outputs.VERSION }}.tgz
-      - name: Publish Flux OCI artifact to GHCR
-        run: |
-          flux push artifact oci://ghcr.io/stefanprodan/manifests/podinfo:${{ steps.prep.outputs.VERSION }} \
-            --path="./kustomize" \
-            --source="${{ github.event.repository.html_url }}" \
-            --revision="${GITHUB_REF_NAME}/${GITHUB_SHA}"
-          flux tag artifact oci://ghcr.io/stefanprodan/manifests/podinfo:${{ steps.prep.outputs.VERSION }} --tag latest
-      - name: Sign OCI artifacts
-        env:
-          COSIGN_EXPERIMENTAL: 1
-        run: |
-          cosign sign docker.io/stefanprodan/podinfo:${{ steps.prep.outputs.VERSION }} --yes
-          cosign sign ghcr.io/stefanprodan/podinfo:${{ steps.prep.outputs.VERSION }} --yes
-          cosign sign ghcr.io/stefanprodan/charts/podinfo:${{ steps.prep.outputs.VERSION }} --yes
-          cosign sign ghcr.io/stefanprodan/manifests/podinfo:${{ steps.prep.outputs.VERSION }} --yes
+#      - name: Publish Timoni module to GHCR
+#        run: |
+#          timoni mod push ./timoni/podinfo oci://ghcr.io/stefanprodan/modules/podinfo \
+#          --sign cosign \
+#          --version ${{ steps.prep.outputs.VERSION }} \
+#          -a 'org.opencontainers.image.source=https://github.com/stefanprodan/podinfo' \
+#          -a 'org.opencontainers.image.licenses=Apache-2.0' \
+#          -a 'org.opencontainers.image.description=A timoni.sh module for deploying Podinfo.' \
+#          -a 'org.opencontainers.image.documentation=https://github.com/stefanprodan/podinfo/blob/main/timoni/podinfo/README.md'
+#      - name: Publish Helm chart to GHCR
+#        run: |
+#          helm package charts/podinfo
+#          helm push podinfo-${{ steps.prep.outputs.VERSION }}.tgz oci://ghcr.io/stefanprodan/charts
+#          rm podinfo-${{ steps.prep.outputs.VERSION }}.tgz
+#      - name: Publish Flux OCI artifact to GHCR
+#        run: |
+#          flux push artifact oci://ghcr.io/stefanprodan/manifests/podinfo:${{ steps.prep.outputs.VERSION }} \
+#            --path="./kustomize" \
+#            --source="${{ github.event.repository.html_url }}" \
+#            --revision="${GITHUB_REF_NAME}/${GITHUB_SHA}"
+#          flux tag artifact oci://ghcr.io/stefanprodan/manifests/podinfo:${{ steps.prep.outputs.VERSION }} --tag latest
+#      - name: Sign OCI artifacts
+#        env:
+#          COSIGN_EXPERIMENTAL: 1
+#        run: |
+#          cosign sign docker.io/stefanprodan/podinfo:${{ steps.prep.outputs.VERSION }} --yes
+#          cosign sign ghcr.io/stefanprodan/podinfo:${{ steps.prep.outputs.VERSION }} --yes
+#          cosign sign ghcr.io/stefanprodan/charts/podinfo:${{ steps.prep.outputs.VERSION }} --yes
+#          cosign sign ghcr.io/stefanprodan/manifests/podinfo:${{ steps.prep.outputs.VERSION }} --yes
       - name: Publish base image
         uses: docker/build-push-action@v5
         with:
@@ -117,26 +117,26 @@ jobs:
           context: .
           platforms: linux/amd64
           file: ./Dockerfile.base
-          tags: docker.io/stefanprodan/podinfo-base:latest
-      - name: Publish helm chart
-        uses: stefanprodan/helm-gh-pages@master
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish config artifact
-        run: |
-          flux push artifact oci://ghcr.io/stefanprodan/podinfo-deploy:${{ steps.prep.outputs.VERSION }} \
-            --path="./kustomize" \
-            --source="${{ github.event.repository.html_url }}" \
-            --revision="${GITHUB_REF_NAME}/${GITHUB_SHA}"
-          flux tag artifact oci://ghcr.io/stefanprodan/podinfo-deploy:${{ steps.prep.outputs.VERSION }} --tag latest
-      - name: Sign config artifact
-        run: |
-          echo "$COSIGN_KEY" > /tmp/cosign.key
-          cosign sign -key /tmp/cosign.key ghcr.io/stefanprodan/podinfo-deploy:${{ steps.prep.outputs.VERSION }} --yes
-          cosign sign -key /tmp/cosign.key ghcr.io/stefanprodan/podinfo-deploy:latest --yes
-        env:
-          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
-          COSIGN_KEY: ${{secrets.COSIGN_KEY}}
+          tags: docker.io/osodevops/podinfo-base:latest
+#      - name: Publish helm chart
+#        uses: stefanprodan/helm-gh-pages@master
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Publish config artifact
+#        run: |
+#          flux push artifact oci://ghcr.io/stefanprodan/podinfo-deploy:${{ steps.prep.outputs.VERSION }} \
+#            --path="./kustomize" \
+#            --source="${{ github.event.repository.html_url }}" \
+#            --revision="${GITHUB_REF_NAME}/${GITHUB_SHA}"
+#          flux tag artifact oci://ghcr.io/stefanprodan/podinfo-deploy:${{ steps.prep.outputs.VERSION }} --tag latest
+#      - name: Sign config artifact
+#        run: |
+#          echo "$COSIGN_KEY" > /tmp/cosign.key
+#          cosign sign -key /tmp/cosign.key ghcr.io/stefanprodan/podinfo-deploy:${{ steps.prep.outputs.VERSION }} --yes
+#          cosign sign -key /tmp/cosign.key ghcr.io/stefanprodan/podinfo-deploy:latest --yes
+#        env:
+#          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
+#          COSIGN_KEY: ${{secrets.COSIGN_KEY}}
       - uses: ./.github/actions/release-notes
       - name: Generate release notes
         run: |
